tests/ui/specialization/issue-38091.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-38091.rs:1:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `(): Valid` is not satisfied
  --> $DIR/issue-38091.rs:12:23
   |
LL |     default type Ty = ();
   |                       ^^ the trait `Valid` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-38091.rs:20:1
   |
LL | trait Valid {}
   | ^^^^^^^^^^^
note: required by a bound in `Iterate::Ty`
  --> $DIR/issue-38091.rs:5:14
   |
LL |     type Ty: Valid;
   |              ^^^^^ required by this bound in `Iterate::Ty`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
